SNAPGPU-196 implemented split and coregistration operation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,8 @@ add_subdirectory(algs/apply-orbit-file-op)
 add_subdirectory(algs/sentinel1_calibrate)
 add_subdirectory(algs/topsar-deburst-op)
 add_subdirectory(algs/coherence_estimation_routine)
+add_subdirectory(algs/coregistration)
+add_subdirectory(algs/topsar_split)
 
 # Test helpers
 add_subdirectory(test/range_doppler_geocoding)
