Alus 244 Coherence chain with 3 operators
* Created EGM96 and SRTM3 managers.
* EGM96 and SRTM3 loading to GPU modification. GPU mem fraction option.
* Input band map for coherence.
* Made coh routine to statically link ops. All the ops are now separate shared targets aswell as static ones.
* Backgeocoding args refactored and master band save.
* Terrain correction added.
* Terrain correction not needed metada removed.
* Sonarcloud fixes.

--- a/algs/coherence/CMakeLists.txt
+++ b/algs/coherence/CMakeLists.txt
@@ -15,7 +15,7 @@ list(APPEND TENSORFLOW_LIBS
         )
 
 list(APPEND COHERENCE_SOURCES
-        ${CMAKE_CURRENT_LIST_DIR}/src/execute.cc
+        ${CMAKE_CURRENT_LIST_DIR}/src/coherence_execute.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/io_tile.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/tf_algorithm_runner.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/gdal_tile_writer.cc
@@ -101,6 +101,7 @@ target_link_libraries(coherence-static
 add_library(coherence-shared
         SHARED
         $<TARGET_OBJECTS:coherence-obj>
+        ${CMAKE_CURRENT_LIST_DIR}/src/coherence_execute_shared.cc
         )
 target_include_directories(coherence-shared
         PUBLIC
