--- a/algs/coherence_estimation_routine/CMakeLists.txt
+++ b/algs/coherence_estimation_routine/CMakeLists.txt
@@ -5,25 +5,20 @@ list(APPEND COHERENCE_ESTIMATION_ROUTINE_SOURCES
 list(APPEND COHERENCE_ESTIMATION_ROUTINE_INCLUDES
         ${CMAKE_CURRENT_LIST_DIR}/include
         ${CMAKE_CURRENT_LIST_DIR}/../algorithm_bond/include
+        ${CMAKE_CURRENT_LIST_DIR}/../backgeocoding/include
+        ${CMAKE_CURRENT_LIST_DIR}/../coherence/include
+        ${CMAKE_CURRENT_LIST_DIR}/../range_doppler_terrain_correction/include
         ${CMAKE_CURRENT_LIST_DIR}/../../app/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/exotic_operations/include
+        ${CMAKE_CURRENT_LIST_DIR}/../../util/common/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/cuda/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/gdal/include
-        )
-
-add_library(coherence-estimation-routine-obj
-        OBJECT
-        ${COHERENCE_ESTIMATION_ROUTINE_SOURCES}
-        )
-
-target_include_directories(coherence-estimation-routine-obj
-        PRIVATE
-        ${COHERENCE_ESTIMATION_ROUTINE_INCLUDES}
+        ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include
         )
 
 add_library(coherence-estimation-routine-static
         STATIC
-        $<TARGET_OBJECTS:coherence-estimation-routine-obj>
+        ${COHERENCE_ESTIMATION_ROUTINE_SOURCES}
         )
 
 target_include_directories(coherence-estimation-routine-static
@@ -34,7 +29,11 @@ target_include_directories(coherence-estimation-routine-static
 target_link_libraries(coherence-estimation-routine-static
         PUBLIC
         alg-bond-static
+        backgeocoding-static
+        coherence-static
         gdal-util-static
+        snap-engine-static
+        terrain-correction-static
         )
 
 set_target_properties(coherence-estimation-routine-static
@@ -44,7 +43,7 @@ set_target_properties(coherence-estimation-routine-static
 
 add_library(coherence-estimation-routine-shared
         SHARED
-        $<TARGET_OBJECTS:coherence-estimation-routine-obj>
+        ${COHERENCE_ESTIMATION_ROUTINE_SOURCES}
         )
 
 target_include_directories(coherence-estimation-routine-shared
@@ -55,7 +54,11 @@ target_include_directories(coherence-estimation-routine-shared
 target_link_libraries(coherence-estimation-routine-shared
         PUBLIC
         alg-bond-static
+        backgeocoding-static
+        coherence-static
         gdal-util-static
+        snap-engine-static
+        terrain-correction-static
         )
 
 set_target_properties(coherence-estimation-routine-shared
