alus-246 READMEs and user information
* Organized READMEs
* --aux argument is hidden - experimental only
* VERSION file
* Renamed files with wrong extensions
* RPATH attribute

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -139,4 +139,62 @@ pipelines:
             - scp -r -oStrictHostKeyChecking=no *.tar.gz ubuntu@$ip_address:/tmp/nightly_builds
             - ssh -oStrictHostKeyChecking=no ubuntu@$ip_address "cd /tmp/nightly_builds; ./execute_nightly.sh ${build_id} /home/ubuntu/nightly_datasets/beirut_dimap/ /home/ubuntu/nightly_aux/SRTM3/ /home/ubuntu/nightly_datasets/virumaa/"
           after-script:
+            - aws ec2 stop-instances --instance-ids $P3_2xLARGE_INSTANCE_ID --profile sid_man 
+    nightly-binary-check: # Duplicate of nightly-build except no CI check
+      - step:
+          name: 'Build Alus release package'
+          image: cgialus/alus-infra:latest
+          clone:
+            depth: 1
+            enabled: true
+            lfs: true
+          script:
+            - git submodule update --init --recursive
+            - build_dir="build-nightly"
+            - cmake . -B${build_dir} -DENABLE_UNIT_TESTS=false -DENABLE_INTEGRATION_TESTS=false -DCUDA_ARCH="50;60;70;75"
+            - cmake --build $build_dir --target all -- -j 8
+            - cd $build_dir
+            - date_stamp=$(date +"%Y_%m_%d_%H%M")
+            - build_package_name="alus-nightly-${BITBUCKET_BUILD_NUMBER}-${date_stamp}"
+            - mv alus_package $build_package_name
+            - cp ../README.md $build_package_name/.
+            - cp ../VERSION $build_package_name/.
+            - echo $BITBUCKET_COMMIT >> $build_package_name/VERSION
+            - echo $build_package_name >> $build_package_name/VERSION
+            - tar -czvf ${build_package_name}.tar.gz $build_package_name
+          artifacts:
+            - build-nightly/*.tar.gz
+            - build-automation/execute_nightly.sh
+            - build-automation/run_beirut_disaster_test.sh
+            - build-automation/run_virumaa_calibration_test.sh
+            - build-automation/compare_alus_output.py
+      - step:
+          name: 'End to end tests and publish'
+          image: cgialus/alus-ci:latest
+          clone:
+            enabled: false
+          script:
+            - cd ~
+            - mkdir .aws
+            - cd .aws
+            - echo "[profile sid_man]" > config
+            - echo "aws_access_key_id = $SID_MAN_ACCESS_KEY_ID" >> config
+            - echo "aws_secret_access_key = $SID_MAN_SECRET_ACCESS_KEY" >> config
+            - echo "region = eu-central-1" >> config
+            - echo "output = json" >> config
+            - aws ec2 start-instances --instance-ids $P3_2xLARGE_INSTANCE_ID --profile sid_man
+            - sleep 60
+            - ip_address=$(aws ec2 describe-instances --instance-ids $P3_2xLARGE_INSTANCE_ID --profile sid_man | grep PublicDnsName | head -1 | awk -F'[:]' '{print $2}' | xargs)
+            - ip_address=${ip_address%?}
+            - echo $ip_address
+            - cd $BITBUCKET_CLONE_DIR
+            - ssh -oStrictHostKeyChecking=no ubuntu@$ip_address "mkdir /tmp/nightly_builds"
+            - scp -oStrictHostKeyChecking=no build-automation/execute_nightly.sh build-automation/run_beirut_disaster_test.sh build-automation/compare_alus_output.py build-automation/run_virumaa_calibration_test.sh ubuntu@$ip_address:/tmp/nightly_builds
+            - cd build-nightly
+            - build_filename=$(basename *.tar.gz)
+            - build_id="${build_filename%%.*}"
+            - scp -r -oStrictHostKeyChecking=no *.tar.gz ubuntu@$ip_address:/tmp/nightly_builds
+            - ssh -oStrictHostKeyChecking=no ubuntu@$ip_address "cd /tmp/nightly_builds; ./execute_nightly.sh ${build_id} /home/ubuntu/nightly_datasets/beirut_dimap/ /home/ubuntu/nightly_aux/SRTM3/ /home/ubuntu/nightly_datasets/virumaa/"
+          after-script:
             - aws ec2 stop-instances --instance-ids $P3_2xLARGE_INSTANCE_ID --profile sid_man
+
