--- a/util/gdal/CMakeLists.txt
+++ b/util/gdal/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 list(APPEND GDAL_UTIL_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/dataset.cc
-        ${CMAKE_CURRENT_LIST_DIR}/src/dem.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/src/dem.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/target_dataset.cc
         )
 
