--- a/algs/coherence_estimation_routine/CMakeLists.txt
+++ b/algs/coherence_estimation_routine/CMakeLists.txt
@@ -1,19 +1,12 @@
 list(APPEND COHERENCE_ESTIMATION_ROUTINE_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/coherence_estimation_routine_execute.cc
+        ${CMAKE_CURRENT_LIST_DIR}/src/geotiff_and_beam_dimap_execute.cc
+        ${CMAKE_CURRENT_LIST_DIR}/src/safe_execute.cc
         )
 
 list(APPEND COHERENCE_ESTIMATION_ROUTINE_INCLUDES
         ${CMAKE_CURRENT_LIST_DIR}/include
-        ${CMAKE_CURRENT_LIST_DIR}/../algorithm_bond/include
-        ${CMAKE_CURRENT_LIST_DIR}/../backgeocoding/include
-        ${CMAKE_CURRENT_LIST_DIR}/../coherence/include
-        ${CMAKE_CURRENT_LIST_DIR}/../range_doppler_terrain_correction/include
         ${CMAKE_CURRENT_LIST_DIR}/../../app/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/exotic_operations/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/common/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/cuda/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/gdal/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include
         )
 
 add_library(coherence-estimation-routine-static
@@ -29,10 +22,13 @@ target_include_directories(coherence-estimation-routine-static
 target_link_libraries(coherence-estimation-routine-static
         PUBLIC
         alg-bond-static
+        apply-orbit-file-op-static
+        coregistration-static
         backgeocoding-static
         coherence-static
         gdal-util-static
         snap-engine-static
+        topsar-deburst-op-static
         terrain-correction-static
         )
 
@@ -54,10 +50,13 @@ target_include_directories(coherence-estimation-routine-shared
 target_link_libraries(coherence-estimation-routine-shared
         PUBLIC
         alg-bond-static
+        apply-orbit-file-op-static
+        coregistration-static
         backgeocoding-static
         coherence-static
         gdal-util-static
         snap-engine-static
+        topsar-deburst-op-static
         terrain-correction-static
         )
 
