--- a/app/unit_test/CMakeLists.txt
+++ b/app/unit_test/CMakeLists.txt
@@ -2,6 +2,7 @@
 list(APPEND APP_UNIT_TEST_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/algorithm_parameters.cc
         ${CMAKE_CURRENT_LIST_DIR}/dem_assistant.cc
+        ${CMAKE_CURRENT_LIST_DIR}/command_line_options.cc
         )
 
 add_executable(app_unit_test ${APP_UNIT_TEST_SOURCES})
