SNAPGPU-262: Correct calibration sigma0 and dn bands
* Corrected calibration error
* Introduced some code optimisations

SNAPGPU-251: Calibration routine optimizations.

1) CPU threading
1) Host side pinned memory
2) Pre-allocated device memory
3) In the core loop, everything is done on non-default streams
4) Use CInt16 type directly in the kernel

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -39,6 +39,7 @@ list(APPEND TEST_SOURCES
         src/multithreading_test.cc
         src/sentinel_1_calibrate_test.cc
         src/sentinel_1_calibrate_utils_test.cc
+        src/cuda_util_test.cc
         )
 
 add_executable(unit_test ${TEST_SOURCES})
