--- a/algs/coherence_estimation_routine/CMakeLists.txt
+++ b/algs/coherence_estimation_routine/CMakeLists.txt
@@ -6,35 +6,6 @@ list(APPEND COHERENCE_ESTIMATION_ROUTINE_SOURCES
 
 list(APPEND COHERENCE_ESTIMATION_ROUTINE_INCLUDES
         ${CMAKE_CURRENT_LIST_DIR}/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../app/include
-        )
-
-add_library(coherence-estimation-routine-static
-        STATIC
-        ${COHERENCE_ESTIMATION_ROUTINE_SOURCES}
-        )
-
-target_include_directories(coherence-estimation-routine-static
-        PUBLIC
-        ${COHERENCE_ESTIMATION_ROUTINE_INCLUDES}
-        )
-
-target_link_libraries(coherence-estimation-routine-static
-        PUBLIC
-        alg-bond-static
-        apply-orbit-file-op-static
-        coregistration-static
-        backgeocoding-static
-        coherence-static
-        gdal-util-static
-        snap-engine-static
-        topsar-deburst-op-static
-        terrain-correction-static
-        )
-
-set_target_properties(coherence-estimation-routine-static
-        PROPERTIES
-        OUTPUT_NAME coherence_estimation_routine
         )
 
 add_library(coherence-estimation-routine-shared
@@ -58,6 +29,7 @@ target_link_libraries(coherence-estimation-routine-shared
         snap-engine-static
         topsar-deburst-op-static
         terrain-correction-static
+        common-util-static
         )
 
 set_target_properties(coherence-estimation-routine-shared
