SNAPGPU-276: Remove unnecessary intermediate file writing
* Changed Sentinel1 Calibrate Operator to output results into gdal mem driver
* Changed Terrain Correction Operator to output results in gdal mem driver
* Made Terrain Correction to use GDT_Float32 (all SNAP datasets are written in this format)
* Integrated gdal mem driver into coherence routine.
* Some cleanup of console output.
* Fix integration tests.
* SonarCloud cleanup.
* wif parameter, geotiff write moved to function in gdal util
* Remove test runs that are no longer supported(nightly run fix)
* Improve exception safety in TC gdal usage.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -56,6 +56,8 @@ pipelines:
                 - build-wrapper-linux-x86-64 --out-dir $BW_OUTPUT make -j8
                 - cd $BITBUCKET_CLONE_DIR
                 - sonar-scanner -Dsonar.cfamily.build-wrapper-output=$BW_OUTPUT -Dsonar.sources=algs,app,util -Dsonar.tests=test,test_integration -Dsonar.exclusions=tensorflow/**,external/**,build/**,.git/** -Dsonar.test.exclusions=tensorflow/**,external/**,build/**,.git/** -X
+              artifacts:
+                - sonar-cfamily-reproducer.zip
 
   custom:
     nightly-release: #name of this pipeline
