--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,6 +40,7 @@ list(APPEND TEST_SOURCES
         src/sentinel_1_calibrate_test.cc
         src/sentinel_1_calibrate_utils_test.cc
         src/cuda_util_test.cc
+        src/geotiff_write_test.cc
         )
 
 add_executable(unit_test ${TEST_SOURCES})
@@ -63,6 +64,8 @@ target_link_libraries(unit_test
         range-doppler-geocoding-test-static
         sar-geocoding-test-static
         sentinel1-calibrate-static
+        crypto
+        Boost::filesystem
         )
 
 set_target_properties(unit_test
