SNAPGPU-279 cuda and gdal startup optimisation

--- a/algs/coregistration/CMakeLists.txt
+++ b/algs/coregistration/CMakeLists.txt
@@ -41,6 +41,7 @@ set_target_properties(coregistration-static
         )
 target_link_libraries(coregistration-static
         PUBLIC
+        gdal
         gdal-util-static
         backgeocoding-static
         topsar-split-static
