--- a/test_integration/CMakeLists.txt
+++ b/test_integration/CMakeLists.txt
@@ -45,6 +45,69 @@ list(APPEND TEST_INCLUDE
         ${CMAKE_CURRENT_LIST_DIR}/include
         )
 
+#----------------Prepare all data for integration tests-----------------------------
+add_custom_target(integration-test-prepare-data ALL
+        COMMAND echo "Creating test data"
+
+        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images
+
+        # Apply orbit file data
+        COMMAND rm -rf ${CMAKE_BINARY_DIR}/test_integration/goods/apply_orbit_file_op
+        COMMAND ln -s ${CMAKE_CURRENT_LIST_DIR}/goods/apply_orbit_file_op ${CMAKE_BINARY_DIR}/test_integration/goods/apply_orbit_file_op
+
+        # Prepare DEM files
+        COMMAND test -d ${CMAKE_BINARY_DIR}/test_integration/goods/srtm_41_01.tif || unzip -qn ${CMAKE_CURRENT_LIST_DIR}/goods/srtm_41_01.zip -d ${CMAKE_BINARY_DIR}/test_integration/goods/
+        COMMAND test -d ${CMAKE_BINARY_DIR}/test_integration/goods/srtm_42_01.tif || unzip -qn ${CMAKE_CURRENT_LIST_DIR}/goods/srtm_42_01.zip -d ${CMAKE_BINARY_DIR}/test_integration/goods/
+        COMMAND test -d ${CMAKE_BINARY_DIR}/test_integration/goods/srtm_43_06.tif || unzip -qn ${CMAKE_CURRENT_LIST_DIR}/goods/srtm_43_06.zip -d ${CMAKE_BINARY_DIR}/test_integration/goods/
+        COMMAND test -d ${CMAKE_BINARY_DIR}/test_integration/goods/srtm_44_06.tif || unzip -qn ${CMAKE_CURRENT_LIST_DIR}/goods/srtm_44_06.zip -d ${CMAKE_BINARY_DIR}/test_integration/goods/
+
+        # Prepare Beirut thinned SAFE files
+        COMMAND test -d ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images/S1A_IW_SLC__1SDV_20200805T034334_20200805T034401_033766_03E9F9_52F6_thin.SAFE || unzip -qn ${CMAKE_CURRENT_LIST_DIR}/goods/beirut_images/S1A_IW_SLC__1SDV_20200805T034334_20200805T034401_033766_03E9F9_52F6_thin.SAFE.zip -d ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images
+        COMMAND test -d ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images/S1B_IW_SLC__1SDV_20200730T034254_20200730T034321_022695_02B131_E8DD_thin.SAFE || unzip -qn ${CMAKE_CURRENT_LIST_DIR}/goods/beirut_images/S1B_IW_SLC__1SDV_20200730T034254_20200730T034321_022695_02B131_E8DD_thin.SAFE.zip -d ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images
+
+        # Coregistration data
+        COMMAND test -f ${CMAKE_BINARY_DIR}/test_integration/goods/coregistration_strips.txt || cp ${CMAKE_CURRENT_LIST_DIR}/goods/coregistration_strips.txt ${CMAKE_BINARY_DIR}/test_integration/goods/coregistration_strips.txt
+
+        COMMAND ln -rfns ${CMAKE_CURRENT_LIST_DIR}/goods/ww15mgh_b.grd ${CMAKE_BINARY_DIR}/test_integration/goods/.
+        COMMAND ln -rfns ${CMAKE_CURRENT_LIST_DIR}/goods/master_metadata.dim ${CMAKE_BINARY_DIR}/test_integration/goods/.
+        COMMAND ln -rfns ${CMAKE_CURRENT_LIST_DIR}/goods/slave_metadata.dim ${CMAKE_BINARY_DIR}/test_integration/goods/.
+        COMMAND ln -fns ${CMAKE_CURRENT_LIST_DIR}/goods/egm96TestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
+        COMMAND ln -fns ${CMAKE_CURRENT_LIST_DIR}/goods/tileFormatTestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
+        COMMAND ln -fns ${CMAKE_CURRENT_LIST_DIR}/goods/altitudeTestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
+
+        COMMAND rm -rf ${CMAKE_BINARY_DIR}/test_integration/goods/coherence
+        COMMAND ln -s ${CMAKE_CURRENT_LIST_DIR}/goods/coherence ${CMAKE_BINARY_DIR}/test_integration/goods/coherence
+
+        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction
+
+        # Prepare TC Metadata test data
+        COMMAND ln -fs ${CMAKE_CURRENT_LIST_DIR}/goods/terrain_correction/longitude.img ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction/longitude.img
+        COMMAND ln -fs ${CMAKE_CURRENT_LIST_DIR}/goods/terrain_correction/longitude.hdr ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction/longitude.hdr
+        COMMAND ln -fs ${CMAKE_CURRENT_LIST_DIR}/goods/terrain_correction/latitude.img ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction/latitude.img
+        COMMAND ln -fs ${CMAKE_CURRENT_LIST_DIR}/goods/terrain_correction/latitude.hdr ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction/latitude.hdr
+
+        # Prepare TC Beirut integration test data
+        COMMAND unzip -oq ${CMAKE_CURRENT_LIST_DIR}/goods/terrain_correction/Beirut_IW1_6_VH_orb_stack_cor_deb_coh_data.zip
+        -d ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction
+
+        # Prepare TC Saaremaa test data
+        COMMAND unzip -oq ${CMAKE_CURRENT_LIST_DIR}/goods/terrain_correction/S1A_IW_SLC__1SDV_20190715T160437_20190715T160504_028130_032D5B_58D6_Orb_Stack_coh_deb_data.zip
+        -d ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction
+
+        # Prepare backgeocoding test data
+        COMMAND rm -rf ${CMAKE_BINARY_DIR}/test_integration/goods/backgeocoding COMMAND ln -fsn ${CMAKE_CURRENT_LIST_DIR}/goods/backgeocoding ${CMAKE_BINARY_DIR}/test_integration/goods/backgeocoding
+
+        # Topsar deburst data
+        COMMAND rm -rf ${CMAKE_BINARY_DIR}/test_integration/goods/topsar_deburst_op
+        COMMAND ln -s ${CMAKE_CURRENT_LIST_DIR}/goods/topsar_deburst_op
+        ${CMAKE_BINARY_DIR}/test_integration/goods/topsar_deburst_op
+
+        COMMAND ln -fsn ${CMAKE_CURRENT_LIST_DIR}/goods/beirut_images/S1B_IW_SLC__1SDV_20200730T034254_20200730T034321_022695_02B131_E8DD_thin.SAFE.zip
+        ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images/S1B_IW_SLC__1SDV_20200730T034254_20200730T034321_022695_02B131_E8DD_thin.SAFE.zip
+
+        VERBATIM
+        )
+
 add_executable(backgeocoding-full ${TEST_SOURCES_BACKGEOCODING_FULL})
 target_include_directories(backgeocoding-full
         PUBLIC
@@ -60,6 +123,8 @@ target_link_libraries(backgeocoding-full
         app-util-static
         )
 
+add_dependencies(backgeocoding-full integration-test-prepare-data)
+
 add_executable(integration-test-topsar-split ${TEST_SOURCES_TOPSAR_SPLIT})
 target_link_libraries(integration-test-topsar-split
         PRIVATE
@@ -71,7 +136,9 @@ target_link_libraries(integration-test-topsar-split
         apply-orbit-file-op-static
         )
 
+add_dependencies(integration-test-topsar-split integration-test-prepare-data)
 
+#----------------------Coregistration integration test--------------------------------
 
 add_executable(integration-test-coregistration ${TEST_SOURCES_COREGISTRATION})
 target_include_directories(integration-test-coregistration
@@ -90,14 +157,7 @@ target_link_libraries(integration-test-coregistration
         coregistration-static
         )
 
-add_custom_command(TARGET integration-test-coregistration
-        POST_BUILD
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images
-        COMMAND rm -f ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images/coregistration_test.tif
-        COMMAND test -d ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images/S1A_IW_SLC__1SDV_20200805T034334_20200805T034401_033766_03E9F9_52F6.SAFE || unzip -qn ${CMAKE_CURRENT_LIST_DIR}/goods/beirut_images/S1A_IW_SLC__1SDV_20200805T034334_20200805T034401_033766_03E9F9_52F6.SAFE.zip -d ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images
-        COMMAND test -d ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images/S1B_IW_SLC__1SDV_20200730T034254_20200730T034321_022695_02B131_E8DD.SAFE || unzip -qn ${CMAKE_CURRENT_LIST_DIR}/goods/beirut_images/S1B_IW_SLC__1SDV_20200730T034254_20200730T034321_022695_02B131_E8DD.SAFE.zip -d ${CMAKE_BINARY_DIR}/test_integration/goods/beirut_images
-        COMMAND test -f ${CMAKE_BINARY_DIR}/test_integration/goods/coregistration_strips.txt || cp ${CMAKE_CURRENT_LIST_DIR}/goods/coregistration_strips.txt ${CMAKE_BINARY_DIR}/test_integration/goods/coregistration_strips.txt
-        )
+add_dependencies(integration-test-coregistration integration-test-prepare-data)
 
 #----------------------------Snap engine integration test----------------------------------
 
@@ -119,19 +179,10 @@ target_link_libraries(integration-test-snap-engine
         exotic_operations-static
         sentinel1-util-static
         )
-add_custom_command(TARGET integration-test-snap-engine
-        POST_BUILD
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods
-        # Since grid file is already symlink from unit test goods, option '-r' is needed
-        COMMAND ln -rfns ${CMAKE_CURRENT_LIST_DIR}/goods/ww15mgh_b.grd ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND ln -rfns ${CMAKE_CURRENT_LIST_DIR}/goods/master_metadata.dim ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND ln -rfns ${CMAKE_CURRENT_LIST_DIR}/goods/slave_metadata.dim ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND ln -fns ${CMAKE_CURRENT_LIST_DIR}/goods/egm96TestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND ln -fns ${CMAKE_CURRENT_LIST_DIR}/goods/tileFormatTestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND ln -fns ${CMAKE_CURRENT_LIST_DIR}/goods/altitudeTestData.txt ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        )
 
+add_dependencies(integration-test-snap-engine integration-test-prepare-data)
 
+#----------------------------CUDA coherence integration test----------------------------------
 
 add_executable(integration-test-coherence-cuda ${TEST_SOURCES_COHERENCE_CUDA})
 target_include_directories(integration-test-coherence-cuda PUBLIC ${TEST_INCLUDE})
@@ -149,15 +200,10 @@ target_link_libraries(integration-test-coherence-cuda
 target_compile_options(integration-test-coherence-cuda
         PRIVATE
         )
-add_custom_command(TARGET integration-test-coherence-cuda
-        POST_BUILD
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods
-        COMMAND rm -rf ${CMAKE_BINARY_DIR}/test_integration/goods/coherence
-        COMMAND ln -s ${CMAKE_CURRENT_LIST_DIR}/goods/coherence
-        ${CMAKE_BINARY_DIR}/test_integration/goods/coherence
-        )
 
+add_dependencies(integration-test-coherence-cuda integration-test-prepare-data)
 
+#----------------------------terrain correction integration test----------------------------------
 add_executable(integration-test-tc ${TEST_SOURCES_TC})
 target_include_directories(integration-test-tc PUBLIC ${TEST_INCLUDE})
 target_link_libraries(integration-test-tc
@@ -168,40 +214,8 @@ target_link_libraries(integration-test-tc
         terrain-correction-static
         crypto
         )
-add_custom_command(TARGET integration-test-tc
-        POST_BUILD
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction
 
-        COMMAND cp -aln ${CMAKE_CURRENT_LIST_DIR}/goods/S1A_IW_SLC__1SDV_20190715T160437_20190715T160504_028130_032D5B_58D6_Orb_Stack_coh_deb.data.zip
-        ${CMAKE_BINARY_DIR}/test_integration/goods/.
-
-        COMMAND cp -aln ${CMAKE_CURRENT_LIST_DIR}/goods/terrain_correction/Beirut_IW1_6_VH_orb_stack_cor_deb_coh.data.zip
-        ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction/.
-
-        COMMAND cd ${CMAKE_BINARY_DIR}/test_integration/goods &&
-        unzip -oq S1A_IW_SLC__1SDV_20190715T160437_20190715T160504_028130_032D5B_58D6_Orb_Stack_coh_deb.data.zip
-
-        COMMAND cd ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction &&
-        unzip -oq Beirut_IW1_6_VH_orb_stack_cor_deb_coh.data.zip
-
-        COMMAND cp -aln ${CMAKE_CURRENT_LIST_DIR}/goods/S1A_IW_SLC__1SDV_20190715T160437_20190715T160504_028130_032D5B_58D6_Orb_Stack_coh_deb.tif
-        ${CMAKE_BINARY_DIR}/test_integration/goods/.
-
-        COMMAND cp -aln ${CMAKE_CURRENT_LIST_DIR}/goods/S1A_IW_SLC__1SDV_20190715T160437_20190715T160504_028130_032D5B_58D6_Orb_Stack_coh_deb_TC.tif
-        ${CMAKE_BINARY_DIR}/test_integration/goods/.
-
-        COMMAND cp -aln ${CMAKE_CURRENT_LIST_DIR}/goods/terrain_correction/Beirut_IW1_6_VH_orb_stack_cor_deb_coh.tif
-        ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction/.
-
-        COMMAND cp -aln ${CMAKE_CURRENT_LIST_DIR}/goods/terrain_correction/Beirut_IW1_6_VH_orb_stack_cor_deb_coh_TC.tif
-        ${CMAKE_BINARY_DIR}/test_integration/goods/terrain_correction/.
-
-#        Copy srtm3 files necessary for Beirut test image
-        COMMAND cp -aln ${CMAKE_CURRENT_LIST_DIR}/goods/srtm_43_06.zip ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND cd ${CMAKE_BINARY_DIR}/test_integration/goods && unzip -qn srtm_43_06.zip
-        COMMAND cp -aln ${CMAKE_CURRENT_LIST_DIR}/goods/srtm_44_06.zip ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND cd ${CMAKE_BINARY_DIR}/test_integration/goods && unzip -qn srtm_44_06.zip
-        )
+add_dependencies(integration-test-tc integration-test-prepare-data)
 
 add_executable(integration-test-backgeocoding ${TEST_SOURCES_BACKGEOCODING})
 target_include_directories(integration-test-backgeocoding
@@ -218,16 +232,8 @@ target_link_libraries(integration-test-backgeocoding
         exotic_operations-static
         app-util-static
         )
-add_custom_command(TARGET integration-test-backgeocoding
-        POST_BUILD
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods
-        COMMAND rm -rf ${CMAKE_BINARY_DIR}/test_integration/goods/backgeocoding
-        COMMAND ln -fsn ${CMAKE_CURRENT_LIST_DIR}/goods/backgeocoding ${CMAKE_BINARY_DIR}/test_integration/goods/backgeocoding
-        COMMAND cp -n ${CMAKE_CURRENT_LIST_DIR}/goods/srtm_41_01.zip ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND cd ${CMAKE_BINARY_DIR}/test_integration/goods && unzip -qn srtm_41_01.zip
-        COMMAND cp -n ${CMAKE_CURRENT_LIST_DIR}/goods/srtm_42_01.zip ${CMAKE_BINARY_DIR}/test_integration/goods/.
-        COMMAND cd ${CMAKE_BINARY_DIR}/test_integration/goods && unzip -qn srtm_42_01.zip
-        )
+
+add_dependencies(integration-test-backgeocoding integration-test-prepare-data)
 
 #---------------------------apply orbit file integration test-----------------------
 list(APPEND TEST_SOURCES_APPLY_ORBIT_FILE_OP
@@ -249,13 +255,8 @@ target_link_libraries(integration-test-apply-orbit-file-op
         crypto
         )
 
-add_custom_command(TARGET integration-test-apply-orbit-file-op
-        POST_BUILD
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods
-        COMMAND rm -rf ${CMAKE_BINARY_DIR}/test_integration/goods/apply_orbit_file_op
-        COMMAND ln -s ${CMAKE_CURRENT_LIST_DIR}/goods/apply_orbit_file_op
-        ${CMAKE_BINARY_DIR}/test_integration/goods/apply_orbit_file_op
-        )
+add_dependencies(integration-test-apply-orbit-file-op integration-test-prepare-data)
+
 #---------------------------topsar-deburst-op integration test-----------------------
 list(APPEND TEST_SOURCES_TOPSAR_DEBURST_OP
         src/topsar_deburst_op_test.cc
@@ -276,13 +277,8 @@ target_link_libraries(integration-test-topsar-deburst-op
         crypto
         )
 
-add_custom_command(TARGET integration-test-topsar-deburst-op
-        POST_BUILD
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods
-        COMMAND rm -rf ${CMAKE_BINARY_DIR}/test_integration/goods/topsar_deburst_op
-        COMMAND ln -s ${CMAKE_CURRENT_LIST_DIR}/goods/topsar_deburst_op
-        ${CMAKE_BINARY_DIR}/test_integration/goods/topsar_deburst_op
-        )
+add_dependencies(integration-test-topsar-deburst-op integration-test-prepare-data)
+
 #--------------------------sentinel1 product reader integration test-----------------------
 list(APPEND TEST_SOURCES_SENTINEL1_PRODUCT_READER
         src/test_sentinel1_product_reader.cc
@@ -305,13 +301,7 @@ target_link_libraries(integration-sentinel1_product_reader
         staticZipper
         )
 
-add_custom_command(TARGET integration-sentinel1_product_reader
-        POST_BUILD
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods/sentinel1_product_reader
-        COMMAND test -f ${CMAKE_BINARY_DIR}/test_integration/goods/sentinel1_product_reader/S1A_IW_SLC__1SDV_20180815T154813_20180815T154840_023259_028747_4563.zip || cp ${CMAKE_CURRENT_LIST_DIR}/goods/sentinel1_product_reader/S1A_IW_SLC__1SDV_20180815T154813_20180815T154840_023259_028747_4563.zip ${CMAKE_BINARY_DIR}/test_integration/goods/sentinel1_product_reader
-        COMMAND test -d ${CMAKE_BINARY_DIR}/test_integration/goods/sentinel1_product_reader/S1A_IW_SLC__1SDV_20180815T154813_20180815T154840_023259_028747_4563.SAFE || unzip -qn ${CMAKE_CURRENT_LIST_DIR}/goods/sentinel1_product_reader/S1A_IW_SLC__1SDV_20180815T154813_20180815T154840_023259_028747_4563.zip -d ${CMAKE_BINARY_DIR}/test_integration/goods/sentinel1_product_reader
-        )
+add_dependencies(integration-sentinel1_product_reader integration-test-prepare-data)
 
 #--------------------------sentinel1 calibrate integration test-----------------------
 list(APPEND TEST_SOURCES_SENTINEL1_CALIBRATE
@@ -332,13 +322,21 @@ target_link_libraries(integration-test-sentinel1-calibrate
         gdal-util-static
         )
 
-add_custom_command(TARGET integration-test-sentinel1-calibrate
-        POST_BUILD
-        COMMAND mkdir -p ${CMAKE_BINARY_DIR}/test_integration/goods/sentinel1_calibrate
+add_dependencies(integration-test-sentinel1-calibrate integration-test-prepare-data)
 
-        COMMAND cp -arn ${CMAKE_CURRENT_LIST_DIR}/goods/sentinel1_product_reader/S1A_IW_SLC__1SDV_20180815T154813_20180815T154840_023259_028747_4563.zip
-        ${CMAKE_BINARY_DIR}/test_integration/goods/sentinel1_calibrate/.
-
-        COMMAND cd ${CMAKE_BINARY_DIR}/test_integration/goods/sentinel1_calibrate &&
-        unzip -qn S1A_IW_SLC__1SDV_20180815T154813_20180815T154840_023259_028747_4563.zip
+#----------------Build all integration-tests----------------------------------------
+add_custom_target(integration-test-all)
+add_dependencies(integration-test-all
+        backgeocoding-full
+        integration-test-topsar-split
+        integration-test-coregistration
+        integration-test-snap-engine
+        integration-test-coherence-cuda
+        integration-test-tc
+        integration-test-backgeocoding
+        integration-test-apply-orbit-file-op
+        integration-test-topsar-deburst-op
+        integration-sentinel1_product_reader
+        integration-test-sentinel1-calibrate
+        integration-test-prepare-data
         )
