--- a/util/gdal/CMakeLists.txt
+++ b/util/gdal/CMakeLists.txt
@@ -5,6 +5,7 @@ list(APPEND GDAL_UTIL_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/target_dataset.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/c16_dataset.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/gdal_util.cc
+        ${CMAKE_CURRENT_LIST_DIR}/src/gdal_management.cc
         )
 
 list(APPEND GDAL_UTIL_INCLUDE_DIRS
