snapgpu-287 - Improvements to calibration routine
* Calibrator uses Split's pixel reader
* SRTM formatting now done during deburst
* thread and pinned memory limits from TC for S1Calibrator

--- a/test_integration/CMakeLists.txt
+++ b/test_integration/CMakeLists.txt
@@ -318,6 +318,7 @@ target_link_libraries(integration-test-sentinel1-calibrate
         Boost::iostreams
         alus-gmock-main
         sentinel1-calibrate-static
+        topsar-split-static
         cuda_util-static
         gdal-util-static
         )
