--- a/algs/sentinel1_calibrate/CMakeLists.txt
+++ b/algs/sentinel1_calibrate/CMakeLists.txt
@@ -3,7 +3,6 @@ list(APPEND SENTINEL_1_CALIBRATE_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/sentinel1_calibrate_kernel.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/sentinel1_calibrate_executor.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/sentinel1_calibrate_kernel_utils.cu
-        ${CMAKE_CURRENT_LIST_DIR}/src/sentinel1_calibrate_safe_helper.cc
         )
 
 list(APPEND SENTINEL_1_CALIBRATE_INCLUDE_DIRS
@@ -20,6 +19,7 @@ list(APPEND SENTINEL_1_CALIBRATE_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/../../app/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/gdal/include
         ${CMAKE_CURRENT_LIST_DIR}/../../external/pugixml/include
+        ${CMAKE_CURRENT_LIST_DIR}/../topsar_split/include
         )
 
 add_library(sentinel1-calibrate-obj
@@ -55,6 +55,8 @@ target_link_libraries(sentinel1-calibrate-static
         gdal-util-static
         cuda_util-static
         common-util-static
+        topsar-split-static
+
         )
 
 add_library(sentinel1-calibrate-shared
@@ -83,4 +85,5 @@ target_link_libraries(sentinel1-calibrate-shared
         gdal-util-static
         cuda_util-static
         common-util-static
+        topsar-split-static
         )
